--- a/HyuJokbo/HyuJokbo/Base.lproj/Main.storyboard
+++ b/HyuJokbo/HyuJokbo/Base.lproj/Main.storyboard
@@ -106,7 +106,7 @@
             <objects>
                 <tableViewController id="a0h-eQ-Vbs" customClass="JokboTableViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="59" sectionHeaderHeight="28" sectionFooterHeight="28" id="p1S-tZ-crF" customClass="JokboTableView" customModule="HyuJokbo" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -206,9 +206,10 @@
             <objects>
                 <navigationController id="WgL-RS-YJ1" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="족보" image="icon-jokbo(g)" selectedImage="icon-jokbo(b)" id="3tg-a8-p0p"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FWb-ZZ-ukd">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="FWb-ZZ-ukd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.26507940888404846" green="0.44743871688842773" blue="0.7628854513168335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="a0h-eQ-Vbs" kind="relationship" relationship="rootViewController" id="wEE-DI-hWT"/>
@@ -223,7 +224,7 @@
             <objects>
                 <tableViewController id="vio-zj-cWC" userLabel="구해요" customClass="GoohaeTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="FVr-b3-KVa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -276,9 +277,10 @@
             <objects>
                 <navigationController id="TnH-eV-BB5" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="구해요" image="icon-goohae(g)" selectedImage="icon-goohae(b)" id="1Mt-Ii-0hA"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2TN-lg-tGg">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="2TN-lg-tGg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.26507940888404846" green="0.44743871688842773" blue="0.7628854513168335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="vio-zj-cWC" kind="relationship" relationship="rootViewController" id="yr7-WJ-Cru"/>
@@ -293,7 +295,7 @@
             <objects>
                 <tableViewController id="4ZY-xv-V2L" userLabel="명예의 전당" customClass="HonorTableViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ti0-pk-MpO">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -346,9 +348,10 @@
             <objects>
                 <navigationController id="0ZY-Ir-khy" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="명예의 전당" image="icon-honor(g)" selectedImage="icon-honor(b)" id="RCo-vS-UvS"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9QD-ni-zZu">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="9QD-ni-zZu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.26507940889999998" green="0.44743871689999998" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="4ZY-xv-V2L" kind="relationship" relationship="rootViewController" id="6Vc-BK-r7t"/>
@@ -363,7 +366,7 @@
             <objects>
                 <tableViewController id="iB0-5y-ZVk" userLabel="내 정보" customClass="MydataTableViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="3CP-JC-aDy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -416,9 +419,10 @@
             <objects>
                 <navigationController id="jJ3-5d-jFO" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="내 정보" image="icon-mydata(g)" selectedImage="icon-mydata(b)" id="EHF-Tp-o3K"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="w1r-5k-y1k">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="w1r-5k-y1k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.26507940889999998" green="0.44743871689999998" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="iB0-5y-ZVk" kind="relationship" relationship="rootViewController" id="Vo1-OC-AjL"/>
